--- a/TPM Mini Project/style.css
+++ b/TPM Mini Project/style.css
@@ -1,11 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: borderbox;
+  text-decoration: none;
+  list-style: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+body {
+  font-family: Montserrat;
+}
 .background {
   width: 100%;
   height: 900px;
@@ -14,47 +22,41 @@
   background-repeat: no-repeat;
   min-width: 1080px;
 }
-.navbar {
+
+nav {
+  position: absolute;
   position: fixed;
-  background-color: transparent;
+  background: rgba(0, 0, 0, 0.15);
+  height: 75px;
   width: 100%;
-  height: 70px;
-  display: flex;
 }
-.navbar-logo {
-  height: 40px;
-  padding-left: 100px;
+.navbar-items {
+  padding: 15px 130px;
 }
-.navbar-container {
-  width: 100%;
-  max-width: 1080px;
-  display: flex;
-  justify-content: space-between;
+#navbar-logo {
+  width: 43px;
+  height: 43px;
 }
-.navbar-items-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+nav ul {
+  float: right;
+  margin-right: 20px;
 }
-.navbar-links {
-  list-style-type: none;
-  float: left;
+nav ul li {
+  display: inline-block;
+  padding-top: 8px;
 }
-li {
-  float: left;
-}
-li a:hover {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.navbar-links-text {
-  margin: 44px;
-  padding: 5px;
+nav ul li a {
   color: white;
-  text-decoration: none;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 600px;
-  font-size: 25px;
-  line-height: 43.88px;
+  font-size: 20px;
+  padding: 26px 17px;
+  margin: 0px;
+  line-height: 30px;
+  align-items: center;
+}
+
+.navbar-links:hover {
+  background: rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
 }
 
 .home {
