--- a/TPM Mini Project/style.css
+++ b/TPM Mini Project/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 * {
   margin: 0;
@@ -12,7 +11,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: Montserrat;
+  font-family: "Montserrat", sans-serif;
 }
 .background {
   width: 100%;
@@ -21,15 +20,23 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   min-width: 1080px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 nav {
-  position: absolute;
+  top: 0px;
   position: fixed;
-  background: rgba(0, 0, 0, 0.15);
-  height: 75px;
+  width: 100%;
+  z-index: 999;
+}
+.navbar-black {
+  position: fixed;
+  top: 0;
+  background-color:rgba(0, 0, 0, 0.15);
+  height: 70px;
   width: 100%;
 }
+
 .navbar-items {
   padding: 15px 130px;
 }
@@ -38,20 +45,22 @@ nav {
   height: 43px;
 }
 nav ul {
+  display: flex;
   float: right;
   margin-right: 20px;
 }
 nav ul li {
-  display: inline-block;
-  padding-top: 8px;
+  padding-top: 4px;
 }
 nav ul li a {
+  flex-direction: row;
   color: white;
   font-size: 20px;
-  padding: 26px 17px;
+  padding: 25px 17px;
   margin: 0px;
   line-height: 30px;
-  align-items: center;
+  overflow-x: hidden;
+  z-index: 999;
 }
 
 .navbar-links:hover {
@@ -59,22 +68,290 @@ nav ul li a {
   transition: 0.5s;
 }
 
+.main-text {
+  font-family: 'Montserrat', sans-serif;
+  color: #f6c214;
+  font-size: 3.2rem;
+  font-weight: 700px;
+}
+
+.sec-text {
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  font-size: 1.6rem;
+  font-weight: 500px;
+}
+
 .home {
   background-image: url("landingpagebackground.jpg");
 }
+
+.home-content {
+  display: flex;
+  padding-top: 280px;
+  padding-left: 250px;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.svg-section2 {
+  width: 150px;
+  height: 150px;
+  position: relative;
+}
+
+.logo-spinning {
+  padding-left: 160px;
+}
+
+.spin {
+  animation: spin infinite 10s linear;
+}
+
+@keyframes spin {
+  0% {
+      transform: rotate(0);
+  } 50% {
+      transform: rotate(180deg);
+  } 100% {
+      transform: rotate(360deg)
+  }
+}
+
+.home-white-text {
+  font-size: 1.7rem;
+}
+
+/* #logo-home {
+  width: 150px;
+  height: 150px;
+  padding-left: 123px;
+} */
 
 .about-us {
   background-image: url("page2.jpg");
 }
 
+.about-us-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#about-us-head {
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+
+#about-us-logo {
+  width: 200px;
+  height: 200px;
+  padding-top: 50px;
+}
+
+.text-wrapper {
+  padding-left: 150px;
+  padding-right: 150px;
+  padding-top: 100px;
+  padding-bottom: 0px;
+}
+
+.about-us-text {
+  font-size: 30px;
+  text-align: center;
+  text-justify: inter-word;
+}
+
+.logo-spinning-about-us {
+  top: 30px;
+}
+
+.svg-section3 {
+  width: 200px;
+  height: 200px;
+  position: relative;
+}
+
 .our-work {
   background-color: black;
+  position: relative;
+}
+
+.our-work-content {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+#our-work-head {
+  padding-top: 75px;
+  padding-bottom: 30px;
+}
+
+.our-work-wrapper {
+ padding-left: 150px;
+ padding-right: 150px;
+ float: left;
+ display: flex;
+ position: absolute;
+}
+
+.column {
+  flex: 33.33%;
+}
+
+.topdown {
+  position: relative;
+}
+
+.pic1 {
+  position: relative;
+  width: 450px;
+  height: 550px;
+}
+
+.pic2 {
+  width: 410px;
+  height: 270px;
+}
+
+.pic3 {
+  padding-top: 10px;
+  width: 410px;
+  height: 265px;
+}
+
+.pic4 {
+  width: 350px;
+  height: 550px;
 }
 
 .contact-us {
   background-image: url("page4.jpg");
 }
 
+#contact-us-head {
+  text-align: center;
+  padding-top: 75px;
+}
+
+.contact-us-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-box {
+  border-radius: 2px;
+  background: rgba(255, 255, 255, 0.85);
+  opacity: 50%;
+  width: 500px;
+  height: 500px;
+  border-radius: 20px;
+  box-sizing: border-box;
+  position: absolute;
+}
+.input-form {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 25px;
+  position: relative;
+  padding-left: 17px;
+}
+
+input[type=text] {
+  width: 450px; /* Full width */
+  height: 20px;
+  padding: 8px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+#form-message {
+  height: 150px;
+  text-align: left;
+  position: relative;
+  background: #C4C4C4;
+}
+
+.place-holder-text {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  background: #C4C4C4;
+}
+
+.footer {
+  position: relative;
+  background-color: black;
+  width: 100%;
+  height: 175px;
+  top: 400px;
+}
+
+.sub-footer-title {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 264px;
+  padding-right: 250px;
+  padding-top: 31px;
+}
+
+.aperture-photos {
+  display: flex;
+}
+.footer-title-text {
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  font-size: 18px;
+  font-weight: 300px;
+}
+
+#logo-footer {
+  padding-top: 25px;
+  width: 55px;
+  height: 55px;
+}
+
+.footer-main-text {
+  font-family: 'Montserrat', sans-serif;
+  color: #f6c214;
+  font-size: 1.5rem;
+  font-weight: 700px;
+  padding-top: 37px;
+  padding-left: 15px;
+}
+
+.created-by {
+  display: flex;
+  flex-direction: column;
+}
+.created-by-text {
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  font-size: 18px;
+  font-weight: 300px;
+}
+.fave-solution-logo {
+  width: 300px;
+  padding-top: 40px;
+}
+.copyright-text {
+  position: relative;
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  font-size: 15px;
+  font-weight: 300px;
+  text-align: center;
+  padding-top: 15px;
+}
 ::-webkit-scrollbar {
   width: 5px;
 }
