--- a/TPM Mini Project/style.css
+++ b/TPM Mini Project/style.css
@@ -123,12 +123,6 @@ nav ul li a {
   font-size: 1.7rem;
 }
 
-/* #logo-home {
-  width: 150px;
-  height: 150px;
-  padding-left: 123px;
-} */
-
 .about-us {
   background-image: url("page2.jpg");
 }
@@ -235,6 +229,7 @@ nav ul li a {
 #contact-us-head {
   text-align: center;
   padding-top: 75px;
+  padding-bottom: 50px;
 }
 
 .contact-us-content {
@@ -245,39 +240,45 @@ nav ul li a {
 }
 
 .form-box {
-  border-radius: 2px;
   background: rgba(255, 255, 255, 0.85);
   opacity: 50%;
   width: 500px;
-  height: 500px;
+  height: 415px;
   border-radius: 20px;
   box-sizing: border-box;
   position: absolute;
 }
+
 .input-form {
   width: 500px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   padding-top: 25px;
   position: relative;
-  padding-left: 17px;
+  align-items: center;
 }
 
 input[type=text] {
-  width: 450px; /* Full width */
+  width: 440px; /* Full width */
   height: 20px;
   padding: 8px; /* Some padding */ 
-  border: 1px solid #ccc; /* Gray border */
+  border: 2px solid rgba(0, 0, 0, 0.25); /* Gray border */
   margin-top: 6px; /* Add a top margin */
   margin-bottom: 16px; /* Bottom margin */
-  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+#form-email {
+  position: relative;
+  bottom: 10px;
+}
+#form-phone-number {
+  position: relative;
+  bottom: 20px;
 }
 #form-message {
   height: 150px;
-  text-align: left;
-  position: relative;
   background: #C4C4C4;
+  position: relative;
+  bottom: 30px;
 }
 
 .place-holder-text {
@@ -286,12 +287,31 @@ input[type=text] {
   background: #C4C4C4;
 }
 
+#submit-button {
+  width: 125px;
+  height: 35px;
+  font-family: 'Montserrat', sans-serif;
+  background: #F6C214;
+  color: black;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  position: relative;
+  bottom: 35px;
+}
+
+.submit-text {
+  text-align: center;
+}
+#submit-button:hover {
+  background-color: #be9714;
+}
+
 .footer {
   position: relative;
   background-color: black;
   width: 100%;
   height: 175px;
-  top: 400px;
 }
 
 .sub-footer-title {
